--- a/app/src/main/java/com/first/beauty/functions/package.json
+++ b/app/src/main/java/com/first/beauty/functions/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^7.0.0",
-    "mongoose": "^8.16.4"
+    "mongoose": "^8.16.4",
+    "firebase-functions": "^4.4.0",
+    "firebase-admin": "^11.11.0"
   }
 }
